# pair_macro

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: create_pair.rs
